[package]
name = "LiuProject2"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
curve25519-dalek = { version = "4.1.3", features = ["digest"] }
blake3 = "1.8.0"
bulletproofs = "5.0.0"
merlin = "3.0.0"
thiserror = "2.0.12"
serde = { version = "1.0.219",features = ["derive"] }
digest = "0.10.7"
generic-array = "0.14.7"
typenum = "1.18.0"
rsntp = "4.0.0"
chrono = "0.4.40"
criterion = "0.5.1"
env_logger = "0.11.7"
log = "0.4.27"

[[bin]]
name = "LiuProject2"
path = "src/main.rs"
harness = false

[[bench]]
name = "performance"
path = "benches/performance.rs"
harness = false